src/objects/ISSP_SIS_Account_Status__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Default values for fields SIS Status and SIS Substatus based on Recordtype, Status__c and ISO Country Code</description>
    <fields>
        <fullName>Country_ISO_Codes__c</fullName>
        <description>List of Country ISO codes, comma separated</description>
        <inlineHelpText>Use keyword &quot;All&quot; to select all countries</inlineHelpText>
        <label>Country ISO Codes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Class__c</fullName>
        <description>Account Location_Class value, comma separated</description>
        <inlineHelpText>Use keyword &quot;All&quot; to select all Location Classes</inlineHelpText>
        <label>Location Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordtype__c</fullName>
        <description>Account Developer Name</description>
        <label>Recordtype Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Status__c</fullName>
        <description>Default value for field Account.SIS_Status__c</description>
        <label>SIS Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Substatus__c</fullName>
        <description>Default value for field Account.SIS_Sub_Status__c</description>
        <label>SIS Substatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account Status__c value</description>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ISSP SIS Account Status</label>
    <listViews>
        <fullName>All_w_details</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Country_ISO_Codes__c</columns>
        <columns>Location_Class__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Recordtype__c</columns>
        <columns>SIS_Status__c</columns>
        <columns>SIS_Substatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All w details</label>
        <language>en_US</language>
    </listViews>
</CustomObject>